fix: z-index issue

--- a/src/components/Autocomplete/Autocomplete.module.scss
+++ b/src/components/Autocomplete/Autocomplete.module.scss
@@ -8,7 +8,7 @@
     top: 100%;
     left: 0;
     right: 0;
-    z-index: 2;
+    z-index: 1000;
     background: var(--color-bg-lighter);
     box-shadow: var(--shadow-sm-down);
     min-width: 300px;
